Add interests form to index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <form class="container" id="the-form">
+      <h4>What type of business environment do you prefer?</h4>
       <div class="radio">
         <label>
           <input type="radio" name="environment" value="startup">
@@ -17,7 +18,6 @@
         </label>
       </div>
       <div class="radio">
-        <h4>What type of business environment do you prefer?</h4>
         <label>
           <input type="radio" name="environment" value="small" checked>
           Small-Medium sized company
@@ -35,9 +35,25 @@
           Self-employed
         </label>
       </div>
-<div class="button-container">
-  <button class="btn btn-info submit-button" type="submit" name="button">Submit</button>
-</div>
-</form>
+    </form>
+
+    <form class="container" id="interests">
+      <h4>Which option interests you most??</h4>
+      <div class="radio">
+        <label>
+          <input type="radio" name="environment" value="startup">
+          Spending time making a webpage attractive, perfecting the user interface portion of the project
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="environment" value="small" checked>
+          Solving problems to make a database run faster and more efficient
+        </label>
+    </form>
+
+    <div class="button-container">
+      <button class="btn btn-info submit-button" type="submit" name="button">Submit</button>
+    </div>
   </body>
 </html>
