--- a/index.html
+++ b/index.html
@@ -9,87 +9,91 @@
     <title>Development Track Survey</title>
   </head>
   <body>
-    <form class="container" id="workEnvironment">
-      <h4>What type of work environment do you prefer?</h4>
-      <div class="radio">
-        <label>
-          <input type="radio" name="environment" value="startup">
-          Startup company
-        </label>
+    <form class="container" id="surveyForm">
+      <div class="form-group question1">
+        <h4>What type of work environment do you prefer?</h4>
+        <div class="radio">
+          <label>
+            <input type="radio" name="environment" value="startup">
+            Startup company
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="environment" value="small">
+            Small-Medium sized company
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="environment" value="large">
+            Large enterprise
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="environment" value="selfEmployed">
+            Self-employed
+          </label>
+        </div>
       </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="environment" value="small" checked>
-          Small-Medium sized company
-        </label>
+
+      <div class="form-group question2">
+        <h4>Which option interests you most??</h4>
+        <div class="radio">
+          <label>
+            <input type="radio" name="frontBackEnd" value="frontEnd">
+            Spending time making a webpage attractive, perfecting the user interface portion of the project
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="frontBackEnd" value="backEnd">
+            Solving problems to make a database run faster and more efficient
+          </label>
+        </div>
       </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="environment" value="large">
-          Large enterprise
-        </label>
+
+      <div class="form-group question3"
+        <h4>What type of problem solving do you like most?</h4>
+        <div class="radio">
+          <label>
+            <input type="radio" name="frontBackEnd" value="frontEnd">
+            Figuring out how to make something better that already works
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="frontBackEnd" value="backEnd">
+            Figuring out a design to make something complicated work
+          </label>
+        </div>
       </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="environment" value="selfEmployed">
-          Self-employed
-        </label>
+
+
+      <div class="form-group question4">
+        <h6>Do you like the idea of creating webpages, or mobile applications?</h6>
+        <select class="surveyForm">
+          <option value="web">Web Pages</option>
+          <option value="mobile">Mobile Apps </option>
+        </select>
+      </div>
+
+      <div class="form-group question5">
+        <h6>If you have previous development experience, which language do you like most?</h6>
+        <select>
+          <option value="none">No previous experience</option>
+          <option value="ruby">Ruby</option>
+          <option value="php">PHP</option>
+          <option value="java">Java</option>
+          <option value="css">CSS</option>
+          <option value="cSharp">C#</option>
+        </select>
+      </div>
+
+      <div class="buttonContainer">
+        <button class="btn btn-info" type="submit" name="button">Submit</button>
       </div>
     </form>
-
-    <form class="container" id="interests">
-      <h4>Which option interests you most??</h4>
-      <div class="radio">
-        <label>
-          <input type="radio" name="frontBackEnd" value="frontEnd">
-          Spending time making a webpage attractive, perfecting the user interface portion of the project
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="frontBackEnd" value="backEnd" checked>
-          Solving problems to make a database run faster and more efficient
-        </label>
-    </form>
-
-    <form class="container" id="problemSolving">
-      <h4>What type of problem solving do you like most?</h4>
-      <div class="radio">
-        <label>
-          <input type="radio" name="frontBackEnd" value="frontEnd">
-          Figuring out how to make something better that already works
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="frontBackEnd" value="backEnd" checked>
-          Figuring out a design to make something complicated work
-        </label>
-    </form>
-
-
-    <form class="container">
-      <h6>Do you like the idea of creating webpages, or mobile applications?</h6>
-      <select class="surveyForm" id="developmentType">
-        <option value="web">Web Pages</option>
-        <option value="mobile">Mobile Apps </option>
-      </select>
-    </form>
-
-    <form class="container">
-      <h6>If you have previous development experience, which language do you like most?</h6>
-      <select class="surveyForm" id="developmentLanguage">
-        <option value="none">No previous experience</option>
-        <option value="ruby">Ruby</option>
-        <option value="php">PHP</option>
-        <option value="java">Java</option>
-        <option value="css">CSS</option>
-        <option value="cSharp">C#</option>
-      </select>
-    </form>
-
-    <div class="button-container">
-      <button class="btn btn-info" type="submit" name="button">Submit</button>
-    </div>
   </body>
 </html>
