Add variables to store radio and select box inputs in scripts.js

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
         </div>
       </div>
 
-      <div class="form-group question3"
+      <div class="form-group question3">
         <h4>What type of problem solving do you like most?</h4>
         <div class="radio">
           <label>
-            <input type="radio" name="frontBackEnd" value="frontEnd">
+            <input type="radio" name="problemSolving" value="frontEnd">
             Figuring out how to make something better that already works
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="frontBackEnd" value="backEnd">
+            <input type="radio" name="problemSolving" value="backEnd">
             Figuring out a design to make something complicated work
           </label>
         </div>
