Add language variables and branch for answer1 to scripts.js

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <div class="form-group question4">
         <h6>Do you like the idea of creating webpages, or mobile applications?</h6>
-        <select class="surveyForm">
+        <select class="form-control" id="webMobile">
           <option value="web">Web Pages</option>
           <option value="mobile">Mobile Apps </option>
         </select>
@@ -81,7 +81,7 @@
 
       <div class="form-group question5">
         <h6>If you have previous development experience, which language do you like most?</h6>
-        <select>
+        <select class="form-control" id="language">
           <option value="none">No previous experience</option>
           <option value="ruby">Ruby</option>
           <option value="php">PHP</option>
