Add location reload if error and hide statement

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Development Track Survey</title>
   </head>
   <body>
+    <h1>Development Track Survey</h1>
     <form class="container" id="surveyForm">
       <div class="form-group question1">
         <h4>What type of work environment do you prefer?</h4>
