Add bootstrap styling and content to index.html

--- a/index.html
+++ b/index.html
@@ -9,33 +9,42 @@
     <title>Development Track Survey</title>
   </head>
   <body>
-    <h1>Development Track Survey</h1>
+    <header>
+
+      <h1>Development Track Survey</h1>
+      <p>Answering all the questions listed will tell you which path is most likely going to be the best path for you! <em>Note: Results can outcome to 2 development paths being best for you.</em></p>
+    </header>
     <form class="container" id="surveyForm">
-      <div class="form-group question1">
-        <h4>What type of work environment do you prefer?</h4>
-        <div class="radio">
-          <label>
-            <input type="radio" name="environment" value="startup">
-            Startup company
-          </label>
+      <div class="form-group question1 panel panel-default">
+        <div class="panel-heading">
+          <h4>What type of work environment do you prefer?</h4>
         </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="environment" value="small">
-            Small-Medium sized company
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="environment" value="large">
-            Large enterprise
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="environment" value="selfEmployed">
-            Self-employed
-          </label>
+        <div class="panel-body">
+
+          <div class="radio">
+            <label>
+              <input type="radio" name="environment" value="startup">
+              Startup company
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="environment" value="small">
+              Small-Medium sized company
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="environment" value="large">
+              Large enterprise
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="environment" value="selfEmployed">
+              Self-employed
+            </label>
+          </div>
         </div>
       </div>
 
