Add header styling to styles.css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <title>Development Track Survey</title>
   </head>
   <body>
-    <header>
-
-      <h1>Development Track Survey</h1>
+    <header class="jumbotron" id="myHeader">
+      <h1 id="titleHeader">Development Track Survey</h1>
       <p>Answering all the questions listed will tell you which path is most likely going to be the best path for you! <em>Note: Results can outcome to 2 development paths being best for you.</em></p>
     </header>
     <form class="container" id="surveyForm">
