Add margin spacing and colors to styles.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="jumbotron" id="myHeader">
       <h1 id="titleHeader">Development Track Survey</h1>
-      <p>Answering all the questions listed will tell you which path is most likely going to be the best path for you! <em>Note: Results can outcome to 2 development paths being best for you.</em></p>
+      <p>Answering all the questions listed will tell you which path is most likely going to be the best path for you! <br><em>Note: The result can outcome to 2 development paths being best for you.</em></p>
     </header>
     <form class="container" id="surveyForm">
       <div class="form-group question1 panel panel-default">
@@ -107,7 +107,7 @@
 
     <!-- End of Form Results -->
     <div class="rubyRails">
-      <p>You should look into being a Ruby/Rails developer!</p>
+      <p><strong>You should look into being a Ruby/Rails developer! Ruby/Rails developers work on building websites still using HTML, CSS, Javscript for the front end. Ruby/Rails is a powerful server-side framework. <strong></p>
     </div>
     <div class="phpDrupal">
       <p>You should look into being a PHP/Drupal developer!</p>
