--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form class="container" id="surveyForm">
       <div class="form-group question1 panel panel-default">
         <div class="panel-heading">
-          <h4>What type of work environment do you prefer?</h4>
+          <h4 class="panel-title">What type of work environment do you prefer?</h4>
         </div>
         <div class="panel-body">
 
@@ -47,41 +47,49 @@
         </div>
       </div>
 
-      <div class="form-group question2">
-        <h4>Which option interests you most??</h4>
-        <div class="radio">
-          <label>
-            <input type="radio" name="frontBackEnd" value="frontEnd">
-            Spending time making a webpage attractive, perfecting the user interface portion of the project
-          </label>
+      <div class="form-group question2 panel panel-default">
+        <div class="panel-heading">
+          <h4>Which option interests you most??</h4>
         </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="frontBackEnd" value="backEnd">
-            Solving problems to make a database run faster and more efficient
-          </label>
+        <div class="panel-body">
+          <div class="radio">
+            <label>
+              <input type="radio" name="frontBackEnd" value="frontEnd">
+              Spending time making a webpage attractive, perfecting the user interface portion of the project
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="frontBackEnd" value="backEnd">
+              Solving problems to make a database run faster and more efficient
+            </label>
+          </div>
         </div>
       </div>
 
-      <div class="form-group question3">
-        <h4>What type of problem solving do you like most?</h4>
-        <div class="radio">
-          <label>
-            <input type="radio" name="problemSolving" value="frontEnd">
-            Figuring out how to make something better that already works
-          </label>
+      <div class="form-group question3 panel panel-default">
+        <div class="panel-heading">
+          <h4>What type of problem solving do you like most?</h4>
         </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="problemSolving" value="backEnd">
-            Figuring out a design to make something complicated work
-          </label>
+        <div class="panel-body">
+          <div class="radio">
+            <label>
+              <input type="radio" name="problemSolving" value="frontEnd">
+              Figuring out how to make something better that already works
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="problemSolving" value="backEnd">
+              Figuring out a design to make something complicated work
+            </label>
+          </div>
         </div>
       </div>
 
 
       <div class="form-group question4">
-        <h6>Do you like the idea of creating webpages, or mobile applications?</h6>
+        <h4>Do you like the idea of creating webpages, or mobile applications?</h4>
         <select class="form-control" id="webMobile">
           <option value="web">Web Pages</option>
           <option value="mobile">Mobile Apps </option>
@@ -89,7 +97,7 @@
       </div>
 
       <div class="form-group question5">
-        <h6>If you have previous development experience, which language do you like most?</h6>
+        <h4>If you have previous development experience, which language do you like most?</h4>
         <select class="form-control" id="language">
           <option value="none">No previous experience</option>
           <option value="ruby">Ruby</option>
