Add content to result classes and media queries in styles.css

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <p><strong>You should look into being a Ruby/Rails developer! Ruby/Rails developers work on building websites still using HTML, CSS, Javscript for the front end. Ruby/Rails is a powerful server-side framework. <strong></p>
     </div>
     <div class="phpDrupal">
-      <p>You should look into being a PHP/Drupal developer!</p>
+      <p>You should look into being a PHP/Drupal developer! PHP is the most popular back-end programming language. This programming language is great to learn because of its versatility and ability to build websites at a fast pace. </p>
     </div>
     <div class="javaAndroid">
       <p>You should look into being a Java/Android developer!</p>
