Add desciptions for each programming language in index.html

--- a/index.html
+++ b/index.html
@@ -114,20 +114,22 @@
     </form>
 
     <!-- End of Form Results -->
-    <div class="rubyRails">
-      <p><strong>You should look into being a Ruby/Rails developer! Ruby/Rails developers work on building websites still using HTML, CSS, Javscript for the front end. Ruby/Rails is a powerful server-side framework. <strong></p>
-    </div>
-    <div class="phpDrupal">
-      <p>You should look into being a PHP/Drupal developer! PHP is the most popular back-end programming language. This programming language is great to learn because of its versatility and ability to build websites at a fast pace. </p>
-    </div>
-    <div class="javaAndroid">
-      <p>You should look into being a Java/Android developer!</p>
-    </div>
-    <div class="cssDesign">
-      <p>You should look into being a CSS/Design developer!</p>
-    </div>
-    <div class="cSharpNet">
-      <p>You should look into being a C#/.NET developer!</p>
+    <div class="results">
+      <div class="rubyRails">
+        <p><strong>You should look into being a Ruby/Rails developer! Ruby/Rails developers work on building websites still using HTML, CSS, Javscript for the front end. Ruby/Rails is a powerful server-side framework. <strong></p>
+      </div>
+      <div class="phpDrupal">
+        <p>You should look into being a PHP/Drupal developer! PHP is the most popular back end programming language. This programming language is great to learn because of its versatility and ability to build websites at a fast pace. </p>
+      </div>
+      <div class="javaAndroid">
+        <p>You should look into being a Java/Android developer! Mobile development is a highly demanded skill for all software companies. Java and android development is common in enterprise-level companies.</p>
+      </div>
+      <div class="cssDesign">
+        <p>You should look into being a CSS/Design developer! This path allows you to focus on the design and details of a webpage. Software developers specializing in design work on what the person viewing a webpage actually sees!</p>
+      </div>
+      <div class="cSharpNet">
+        <p>You should look into being a C#/.NET developer! C# is popular in larger and established businesses. It's a powerful back end language that is currently rising in popularity.</p>
+      </div>
     </div>
   </body>
 </html>
