Change else statements to else ifs to fix not answering all questions generating the wrong answer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <div class="form-group question2 panel panel-default">
         <div class="panel-heading">
-          <h4>Which option interests you most??</h4>
+          <h4>Which option interests you most?</h4>
         </div>
         <div class="panel-body">
           <div class="radio">
@@ -89,7 +89,7 @@
 
 
       <div class="form-group question4">
-        <h4>Do you like the idea of creating webpages, or mobile applications?</h4>
+        <h4>Do you like the idea of creating webpages or mobile applications?</h4>
         <select class="form-control" id="webMobile">
           <option value="web">Web Pages</option>
           <option value="mobile">Mobile Apps </option>
@@ -97,7 +97,7 @@
       </div>
 
       <div class="form-group question5">
-        <h4>If you have previous development experience, which language do you like most?</h4>
+        <h4>If you have previous development experience, which language do you prefer?</h4>
         <select class="form-control" id="language">
           <option value="none">No previous experience</option>
           <option value="ruby">Ruby</option>
