--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       <div class="form-group question4">
         <h4>Do you like the idea of creating webpages or mobile applications?</h4>
         <select class="form-control" id="webMobile">
+          <option value="none">Select</option>
           <option value="web">Web Pages</option>
           <option value="mobile">Mobile Apps </option>
         </select>
@@ -110,6 +111,7 @@
 
       <div class="buttonContainer">
         <button class="btn btn-info" type="submit" name="button">Submit</button>
+        <p id="noSelection">*No Fields selected. Fill out the form*</p>
       </div>
     </form>
 
@@ -119,16 +121,16 @@
         <p><strong>You should look into being a Ruby/Rails developer! Ruby/Rails developers work on building websites still using HTML, CSS, Javscript for the front end. Ruby/Rails is a powerful server-side framework. <strong></p>
       </div>
       <div class="phpDrupal">
-        <p>You should look into being a PHP/Drupal developer! PHP is the most popular back end programming language. This programming language is great to learn because of its versatility and ability to build websites at a fast pace. </p>
+        <p><strong>You should look into being a PHP/Drupal developer! PHP is the most popular back end programming language. This programming language is great to learn because of its versatility and ability to build websites at a fast pace. </strong></p>
       </div>
       <div class="javaAndroid">
-        <p>You should look into being a Java/Android developer! Mobile development is a highly demanded skill for all software companies. Java and android development is common in enterprise-level companies.</p>
+        <p><strong>You should look into being a Java/Android developer! Mobile development is a highly demanded skill for all software companies. Java and android development is common in enterprise-level companies.</strong></p>
       </div>
       <div class="cssDesign">
-        <p>You should look into being a CSS/Design developer! This path allows you to focus on the design and details of a webpage. Software developers specializing in design work on what the person viewing a webpage actually sees!</p>
+        <p><strong>You should look into being a CSS/Design developer! This path allows you to focus on the design and details of a webpage. Software developers specializing in design work on what the person viewing a webpage actually sees!</strong></p>
       </div>
       <div class="cSharpNet">
-        <p>You should look into being a C#/.NET developer! C# is popular in larger and established businesses. It's a powerful back end language that is currently rising in popularity.</p>
+        <p><strong>You should look into being a C#/.NET developer! C# is popular in larger and established businesses. It's a powerful back end language that is currently rising in popularity.</strong></p>
       </div>
     </div>
   </body>
