Fix font sizing issue

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form class="container" id="surveyForm">
       <div class="form-group question1 panel panel-default">
         <div class="panel-heading">
-          <h4 class="panel-title">What type of work environment do you prefer?</h4>
+          <h4>What type of work environment do you prefer?</h4>
         </div>
         <div class="panel-body">
 
